Z-index fix on contact container

--- a/index.css
+++ b/index.css
@@ -583,7 +583,7 @@ a {
   /*###############################################*/
 
   #contact-container.active {
-    z-index: -5;
+    z-index: 0;
     opacity: 1;
   }
 
